Fix Error that Info Sublist is too high (#3)

--- a/style/general.less
+++ b/style/general.less
@@ -79,6 +79,7 @@ a, a:active, a:link, a:visited {
 				ul {
 					display: none;
 					padding-top: 1em;
+					min-height: unset;
 
 					li {
 						font-size: 1em;
